# IsThisSeatTakenSolver

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
assets/: banner.avif
src/: __init__.py
src/core/: rules.py  solver.py
src/data/: __init__.py  layouts.py  levels.py
src/entities/: __init__.py  passenger.py  seat.py
tests/: test_logic.py  test_rules.py  test_solver.py
