[project]
name = "is-this-seat-taken-solver"
version = "1.1.0"
description = "Logic puzzle engine for Is This Seat Taken?"
authors = [{name = "GarlicHorse"}]
requires-python = ">=3.10"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"] # Déplacé ici pour éviter le warning

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]